--- a/app.json
+++ b/app.json
@@ -72,4 +72,10 @@
     "buildpacks": [{
         "url": "heroku/python"
     }],
+    "formation": {
+        "worker": {
+            "quantity": 1,
+            "size": "free"
+        }
+    }
 }
